After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732481 - "Other" subcategory is wrong
"Other" subcategory is wrong
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-06-30 14:24 UTC by Elad Alfassa
Modified: 2014-06-30 15:23 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Elad Alfassa 2014-06-30 14:24:55 UTC
Right now "Other" is basically "all". it contains apps from ALL the other subcategories. In reality, it should only contain things that don't fit any other subcategory.
Comment 1 Richard Hughes 2014-06-30 15:10:18 UTC
Working on this now.
Comment 2 Richard Hughes 2014-06-30 15:23:09 UTC
commit 16fc2a8a1e30baeb5d9b1241d49168149ccf586d
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Jun 30 16:10:20 2014 +0100

    Only show applications in 'Other' that did not match any other subcategories
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=732481