Only show applications in 'Other' that did not match any other subcategories

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=732481